--- a/starter/cloudstorage/src/main/resources/templates/home.html
+++ b/starter/cloudstorage/src/main/resources/templates/home.html
@@ -134,14 +134,14 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                <tr th:each="cred: ${creds}">
+                                <tr th:each="credential: ${credentials} " >
                                     <td>
-                                        <button th:onclick="showCredentialModal([[${cred.credentialid}]], [[${cred.url}]], [[${cred.username}]], [[${decryptedPwd.get(cred.credentialid)}]])" type="button" class="btn btn-success">Edit</button>
-                                        <a th:href="@{|/credential/delete/${cred.credentialid}|}" class="btn btn-danger">Delete</a>
+                                        <button type="button" class="btn btn-success" th:onclick="showCredentialModal([[${credential.credentialid}]],[[${credential.url}]],[[${credential.username}]],[[${encryptionService.decryptValue(credential.password,credential.key)}]])">Edit</button>
+                                        <a  th:href="@{/credential/delete/{credentialid}(credentialid = ${credential.credentialid})}" class="btn btn-danger">Delete</a>
                                     </td>
-                                    <th scope="row" th:text="${cred.url}"></th>
-                                    <td th:text="${cred.username}"></td>
-                                    <td th:text="${cred.password}"></td>
+                                    <th th:text="${credential.url}" scope="row">Example Credential URL</th>
+                                    <td th:text="${credential.username}">Example Credential Username</td>
+                                    <td th:text="${credential.password}">Example Credential Password</td>
                                 </tr>
                                 </tbody>
                             </table>
