--- a/starter/cloudstorage/src/main/resources/templates/result.html
+++ b/starter/cloudstorage/src/main/resources/templates/result.html
@@ -10,17 +10,17 @@
     </head>
     <body class="p-3 mb-2 bg-light text-black">
         <div class="container justify-content-center w-50 p-3" style="margin-top: 5em;">
-            <div th:if="${err == null}" class="alert alert-success fill-parent">
+            <div th:if="${error == null}" class="alert alert-success fill-parent">
                 <h1 class="display-5" id="success">Success</h1>
                 <span>Your changes were successfully saved. Click <a th:href="@{/home}">here</a> to continue.</span>
             </div>
-            <div th:if="${err != null}" class="alert alert-danger fill-parent">
+            <div th:if="${error != null}" class="alert alert-danger fill-parent">
                 <h1 class="display-5">Error</h1>
                 <span>Your changes were not saved. Click <a th:href="@{/home}">here</a> to continue.</span>
             </div>
-            <div th:if="${err != null}" class="alert alert-danger fill-parent">
+            <div th:if="${error != null}" class="alert alert-danger fill-parent">
                 <h1 class="display-5">Error</h1>
-                <span th:text="${err}"></span>
+                <span th:text="${error}"></span>
                 <span>Click <a th:href="@{/home}">here</a> to continue.</span>
             </div>
         </div>
