--- a/starter/cloudstorage/src/main/resources/templates/signup.html
+++ b/starter/cloudstorage/src/main/resources/templates/signup.html
@@ -17,7 +17,7 @@
     <h1 class="display-5">Sign Up</h1>
     <form th:action="@{/signup}" th:object="${form}" action="#" method="POST">
         <div th:if="${param.success}" id="success-msg" class="alert alert-dark">
-            You successfully signed up! Please continue to the <a>login</a> page.
+            You successfully signed up! Please continue to the <a th:href="@{/login}">login</a> page.
         </div>
         <div th:if="${param.fail}" class="alert alert-danger">
             <span>Signup failed</span>
