--- a/starter/cloudstorage/src/main/resources/templates/error.html
+++ b/starter/cloudstorage/src/main/resources/templates/error.html
@@ -5,11 +5,10 @@
 </head>
 <body>
 <div class="cover">
-    <h1>NOT FOUND</h1>
+    <h1>URL NOT FOUND</h1>
     <p class="lead">The url you enter is not found now.</p>
-    <p>Please go back to our homepage to restart your browsing experience.</p>
     <div class="alert alert-danger fill-parent">
-        <span>Click here <a th:href="@{/home}">here</a> to back the homepage.</span>
+        <span>Click here <a th:href="@{/login}">here</a> to back the login page.</span>
     </div>
 </div>
 </body>
